Overflow styling fix

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
   display: grid;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 code {
